[package]
name = "autocommit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
color-eyre = "0.5"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
git2 = "0.17.1"
serde_json = "1.0.96"
ureq = { version = "2.6.2", features = ["json"] }
chrono = "0.4.24"
