[package]
name = "autocommit"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/raghavanand98/autocommit"
description = "A simple tool to automatically commit changes to a git repository using GPT-3.5 to generate commit summaries"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
color-eyre = "0.5"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
git2 = "0.17.1"
serde_json = "1.0.96"
ureq = { version = "2.6.2", features = ["json"] }
chrono = "0.4.24"
derive_more = { version= "0.99.17", features = ["display"] }
openssl = { version = "0.9.87", features = ["vendored"] } # just to get CI to work for now.

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
